@@ -45,6 +45,20 @@ thanks to the ``Run()`` function in the ``pylint.lint`` module
   pylint_opts = ['--disable=line-too-long', 'myfile.py']
   pylint.lint.Run(pylint_opts)
 
+Another option would be to use the ``run_pylint`` function, which is the same function
+called by the command line. You can either patch ``sys.argv`` or supply arguments yourself:
+
+.. sourcecode:: python
+
+  import pylint
+
+  sys.argv = ["pylint", "your_file"]
+  pylint.run_pylint()
+
+  # Or:
+
+  pylint.run_pylint(arguments=["your_file"])
+
 To silently run Pylint on a ``module_name.py`` module,
 and get its standard output and error:
 
